change width to prevent shift on mobile

--- a/Control.Geocoder.css
+++ b/Control.Geocoder.css
@@ -81,10 +81,7 @@
 .leaflet-touch .leaflet-control-geocoder-expanded input, .leaflet-control-geocoder-error {
 	width: 70%;
 	height: 26px;
-	margin: 0 0 0 4px;
-	padding: 0 0 0 4px;
-	vertical-align: middle;
-	color: #000;
+	margin: 0 10px 0 4px;
 }
 
 .leaflet-control-geocoder-form input:focus {
